# ice

./: .gitignore  .gitmodules  LICENSE  README.md
ice/: CMakeLists.txt  package.xml
ice/asp/: nodeComposition.lp  nodeComposition.lp~  nodeComposition_v20150218.lp
ice/asp/informationProcessing/: globalOptimization.lp  localOptimization.lp  nicer.lp  nodeComposition_v20150116.lp  nodeComposition_v20150325.lp  processing.lp  searchBottomUp.lp
ice/asp/iroComputing/: computing.lp
ice/asp/transformation/: computing.lp
ice/eval/: EvalScenarios.cpp  ModelGeneration.cpp  eval_node.cpp  ramEval  synthesisEval
ice/eval/asp_ram_test/: chainScenario_global11_10.lp  chainScenario_global12_10.lp  chainScenario_global15_10.lp  chainScenario_global20_10.lp  chainScenario_global2_10.lp  chainScenario_global4_10.lp  chainScenario_global6_10.lp  chainScenario_global7_10.lp  chainScenario_global8_10.lp  chainScenario_global9_10.lp  chainScenario_local13_10.lp  chainScenario_local14_10.lp  chainScenario_local16_10.lp  chainScenario_local17_10.lp  chainScenario_local18_10.lp  chainScenario_local19_10.lp  chainScenario_local1_10.lp  chainScenario_local2_10.lp  chainScenario_local3_10.lp  chainScenario_local5_10.lp  chainScenario_local6_10.lp
ice/include/: easylogging++.h  fnv.h  serialize.h
ice/include/ice/: Configuration.h  Entity.h  EntityDirectory.h  ICEngine.h  Identifier.h  Logger.h  Time.h  TimeFactory.h  TypeDefs.h  XMLReader.h
ice/include/rapidjson/: document.h
ice/ontology/: Ice.owl  IceTest.owl  catalog-v001.xml
ice/src/engine/: ASPCoordinator.cpp  ASPModelGenerator.cpp  ASPSystem.cpp  ASPTransformationGeneration.cpp  AsynchronousTask.cpp  AutoIRONode.cpp  BaseInformationSet.cpp  BaseInformationStream.cpp  CollectionDescription.cpp  CollectionFactory.cpp  ComJobBase.cpp  CommandMessage.cpp  Communication.cpp  CommunicationInterface.cpp  Configuration.cpp  CooperationRequest.cpp  CooperationResponse.cpp  Coordinator.cpp  EngineState.cpp  Entity.cpp  EntityDirectory.cpp  EventHandler.cpp  FastUpdateStrategie.cpp  GContainerFactory.cpp  ICEngine.cpp  IdMessage.cpp  Identifier.cpp  IdentityRequest.cpp  InformationCollection.cpp  InformationMessage.cpp  InformationModel.cpp  InformationReceiver.cpp  InformationRequest.cpp  InformationSender.cpp  InformationSpecification.cpp  InformationStore.cpp  InformationStreamTemplate.cpp  InformationType.cpp  IntMessage.cpp  IntersectionInformationModel.cpp  (+35 more)
ice/src/muparser/: muParserTokenReader.cpp
ice/test/: test_ASPComposition.cpp  test_ASPCoordinator.cpp  test_ASPRepComputation.cpp  test_Buffer.cpp  test_CallbackList.cpp  test_EulerRepTransformation.cpp  test_EventHandler.cpp  test_GContainer.cpp  test_GContainerTransfer.cpp  test_ICEngine.cpp  test_InformationSet.cpp  test_InformationStore.cpp  test_JNI.cpp  test_Logger.cpp  test_ModelComperator.cpp  test_Node.cpp  test_NodeStore.cpp  test_Representation.cpp  test_RepresentationJSON.cpp  test_RepresentationTransformation.cpp  test_RingBuffer.cpp  test_StreamStore.cpp  test_Time.cpp  test_TransformationNode.cpp  test_XMLReader.cpp  test_main.cpp  test_serialize.cpp
ice_base/: CMakeLists.txt  package.xml
ice_base/include/: Base.h
ice_base/src/: Base.cpp
ice_expressions/: CMakeLists.txt  package.xml
ice_expressions/include/: GetTBKB.h
ice_expressions/src/: GetTBKB.cpp
ice_serval_ros_bridge/: CMakeLists.txt  package.xml
ice_serval_ros_bridge/eval/: AgentNode.cpp  KnowledgeBaseNode.cpp  local_agent.launch  local_knowledge_base.launch
ice_serval_ros_bridge/include/: CommunicationInterface.h  Entity.h  EntityDirectory.h  IceServalBridge.h  Identities.h  Identity.h  IdentityDirectory.h  RosGContainerPublisher.h  ServalCommunication.h  ServalInformationMessage.h  ServalInformationReceiver.h  ServalInformationSender.h  XMLInformationReader.h
ice_serval_ros_bridge/launch/: local_test_consumer.launch  local_test_provider.launch  test_consumer.launch  test_provider.launch
ice_serval_ros_bridge/src/: CommandMessage.cpp  CommunicationInterface.cpp  Entity.cpp  EntityDirectory.cpp  IceServalBridge.cpp  IceServalBridgeNode.cpp  IdMessage.cpp  Identities.cpp  Identity.cpp  IdentityDirectory.cpp  InformationMessage.cpp  Message.cpp  OffersMessage.cpp  RequestMessage.cpp  RosGContainerPublisher.cpp  ServalCommunication.cpp  ServalInformationMessage.cpp  ServalInformationReceiver.cpp  ServalInformationSender.cpp  XMLInformationReader.cpp
ice_serval_ros_bridge/tests/: test_GContainerTransfer.cpp  test_bridge.cpp  test_entity.cpp  test_gmessagePublisher.cpp  test_identity.cpp  test_main.cpp  test_xml.cpp
serval_example/: CMakeLists.txt  package.xml
serval_example/src/: client.cpp  receiver.cpp  sender.cpp  server.cpp
serval_wrapper/: CMakeLists.txt  package.xml
serval_wrapper/include/: serval_interface.h
serval_wrapper/src/: serval_interface.cpp
serval_wrapper/tests/: test_keyring.cpp  test_main.cpp  test_mdp.cpp  test_meshms.cpp  test_msp.cpp  test_rhizome.cpp
serval_wrapper_example/: CMakeLists.txt  package.xml
serval_wrapper_example/instance1/: serval.conf
serval_wrapper_example/src/: client.cpp  client_mdp.cpp  server.cpp  server_mdp.cpp
tb_knowledge_base/: CMakeLists.txt  package.xml
tb_knowledge_base/asp/: tb_stuff.lp
tb_knowledge_base/include/: GPSPosition.h  InformationMap.h  RosMarkerSender.h  TBCollectionFactory.h  TBKnowledgeBase.h  TransformationRelLandmarkWGS84.h
tb_knowledge_base/ontology/: catalog-v001.xml  turtleBot.owl
tb_knowledge_base/src/: DetectContaminatedAreas.cpp  DetectDangerZonesRemote.cpp  DetectLandmarks.cpp  DetectVictims.cpp  FusePositions.cpp  FuseVictims.cpp  GPSPosition.cpp  InformationMap.cpp  Pos3D.cpp  Pos3D2RelativeToLandmark.cpp  PositionOrientation3D.cpp  PositionOrientation3D2Pos3D.cpp  RTLandmark.cpp  RelativeToLandmark2Pos3D.cpp  RosMarkerSender.cpp  TBCollectionFactory.cpp  TBKnowledgeBase.cpp  TBLocalization.cpp  TransformationRelLandmarkWGS84.cpp  VictimDetection.cpp  WGS84.cpp  ice_tb_node.cpp
tb_knowledge_base/test/: test_Containers.cpp  test_GPSTransformation.cpp  test_TBKnowledgeBase.cpp  test_main.cpp
(+249 files in other folders)
