<?xml version="1.0"?>
<package>
  <name>serval_wrapper_example</name>
  <version>0.0.0</version>
  <description>The serval_example package</description>

  <maintainer email="paspartout@fogglabs.de">paspartout</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>serval</build_depend>
  <run_depend>serval</run_depend>
  <build_depend>serval_wrapper</build_depend>
  <run_depend>serval_wrapper</run_depend>

</package>